fixed #131 alignment of th and td

--- a/app/assets/stylesheets/application/panels/concepts/concept-list.css.scss
+++ b/app/assets/stylesheets/application/panels/concepts/concept-list.css.scss
@@ -33,7 +33,6 @@
         th {
           width: 140px;
           text-align: right;
-          vertical-align: top;
           color: $button-color;
         }
         
